--- a/app.json
+++ b/app.json
@@ -1,26 +1,29 @@
 {
   "expo": {
-    "name": "fabtech-app",
+    "name": "Fabtech App",
     "slug": "fabtech-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
+    "description": "Fabtech mobile application for manufacturing and fabrication services",
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.fabtech.app"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.fabtech.app"
     },
     "web": {
       "favicon": "./assets/favicon.png"
