--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "fabtech-app",
   "version": "1.0.0",
+  "description": "Fabtech mobile application for manufacturing and fabrication services",
   "main": "index.js",
   "scripts": {
     "start": "expo start",
@@ -8,11 +9,26 @@
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
+  "keywords": [
+    "fabtech",
+    "manufacturing",
+    "fabrication",
+    "mobile",
+    "react-native",
+    "expo"
+  ],
+  "author": "Fabtech Team",
+  "license": "MIT",
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^7.4.8",
+    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/stack": "^7.4.9",
     "expo": "~54.0.12",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-native": "0.81.4",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.16.0"
   },
   "private": true
 }
