--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/bottom-tabs": "^7.4.8",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/stack": "^7.4.9",
+    "@supabase/supabase-js": "^2.58.0",
     "expo": "~54.0.12",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
